@@ -1,3 +1,6 @@
+Next
+  - Add a site-specific extractor for yimedia.com.tw
+
 v0.41.0 2021-03-31T21:26:10+0900
   - Update the extractor of ttv to catchup with the website updates.
   - Update the extractor of www.mdnkids.com to catchup with the website updates.
